# finantial-analizer

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_agent.py
docs/: presentation.md
output/: annual financial report_analyze.md  annual financial report_report.md  financial report_analyze.md  financial report_report.md  tesla annual financial report_analyze.md  tesla annual financial report_report.md
src/doc_analizer/: crew.py  llm.py  main.py
src/doc_analizer/config/: agents.yaml  tasks.yaml
src/doc_analizer/tools/: __init__.py  calculator.py  landing_ai_extractor.py  pushover_notifier.py
tests/: test_calculator.py
